# Eco-Fort

./: Band-RQs-Coremathobjects-Primarysurfacestoextend.csv  Cargo.toml  README.md  db_api_endpoint_calibration.sql  db_blastradius_index.sql  db_lane_governance.sql  doc_api_endpoint_calibration.md  table-7cb24c0c-04a9-46c7-ae1d-8d7c165bb5d1 (1).csv  table-7cb24c0c-04a9-46c7-ae1d-8d7c165bb5d1 (2).csv  table-7cb24c0c-04a9-46c7-ae1d-8d7c165bb5d1 (3).csv  table-7cb24c0c-04a9-46c7-ae1d-8d7c165bb5d1 (4).csv  table-7cb24c0c-04a9-46c7-ae1d-8d7c165bb5d1 (5).csv  table-7cb24c0c-04a9-46c7-ae1d-8d7c165bb5d1 (6).csv  table-7cb24c0c-04a9-46c7-ae1d-8d7c165bb5d1.csv
.specs/: EcoNetSchemaShard2026v1.aln
aln/: VirtaShardQueryRequest2026v1.aln
artifact_registry_core/src/: lib.rs
config/: ecosafety-spine.toml
crates/buildscheduler/: Cargo.toml
crates/cyboquatic-eco-planes/src/: lib.rs
crates/cyboquatic-ecosafety-core/: Cargo.toml
crates/cyboquatic-ecosafety-core/src/: lib.rs
crates/cyboquatic-materials-core/src/: lib.rs
crates/cyboquatic_ecosafety_core/src/: lib.rs
crates/econet-governance-api/: Cargo.toml
crates/econet-governance-api/src/: client.rs  lib.rs  models.rs
crates/econet_repo_manifest/: Cargo.toml
crates/econet_repo_manifest/src/: ffi.rs  lib.rs
crates/ecosafety-core/src/: lane.rs  residual.rs
crates/ecosafety_core/: Cargo.toml
crates/ecosafety_core/src/: lib.rs
crates/mt6883-registry-core/src/: lib.rs
crates/qpudataschemashard/: Cargo.toml
crates/qpudataschemashard/src/: lib.rs
crates/qpudatashardwriter/: Cargo.toml
crates/qpudatashardwriter/src/: lib.rs
crates/virta-git/: Cargo.toml
crates/virta-git/config/: remote_providers.toml
crates/virta-git/config/policies/: authorship_policy.toml  non_fiction_policy.toml
db/: db_bioscale_workspace.sql  db_blastradius_index.sql  db_corridor_enforcement_log.sql  db_econet_governance_spine_migration.sql  db_evidence_provenance_chain.sql  db_ker_window_aggregates.sql  db_large_particle_files.sql  db_node_adjacency.sql  db_qpu_citizen_continuity.sql  db_qpu_shard_catalog.sql  db_qpu_sql_file_index.sql  db_qpu_vfs_operation.sql  db_qpu_virtual_hardware.sql  dbalienfs_crate_graph.sql  dbalienfs_errors.sql  dbalienfs_file_index.sql  dbartifactprovenance.sql  dbartifactprovenancecommitment.sql  dbartifactregistry.sql  dbartifactregistry_index.sql  dbdefinitionregistry.sql  dbdefinitionregistryschema.sql  dbecosafety_math_spine_band1.sql  dbfileindex.mt6883.sql  dbhydrtelemetrywindowschema.sql  dblanegovernanceker.sql  dblanegovernancetopology.sql  dblanelyapunovker.sql  dbmt6883registry.sql  dbnodewastemetricschema.sql  dbnonactuatingcontracts.sql  dbresidualkernelschema.sql  dbsovereignimprovement.sql  dbtopologyaudit.sql  eco_asset_registry_schema.sql  eco_constellation_index.sql  eco_planes.sql  eco_restoration_metrics_schema.sql  ecosafety_grammar_core.sql  lane_status_shard_schema.sql  (+3 more)
doc/: QpuShardCatalogSpec2026v1.md  docmt6883continuity.md
doc/research/: EcoNet-Constellation-Research-Questions.md
docs/: 100-research-questions.md  ArtifactRegistry.md  ArtifactRegistrySpec.md  governance_framework_implementation.md
econet-index/src/: migration.rs
include/: PfasMonitorShard.hpp  QpuInvariants.hpp
migrations/: 016_plane_weights.sql  017_shardinstance_plane_contract.sql  018_blastradius.sql  019_node_adjacency.sql  020_lane_governance.sql  021_topology_risk.sql  022_shardinstance_topology.sql  023_mt6883_registry.sql
qpudatashards/particles/: ArtifactRegistryShard2026v1.aln  BlastRadiusShard2026v1.aln  LaneStatusShard.v1.aln  blastRadiusShard.v1.aln  common.citation_list.v1.aln  node.pfas_monitor.v1.aln  node.qpudata.schema.v2.aln  template.timeseries.v1.aln
qpudatashards/schemas/: AcceleratedAgingTranslation2026v1.schema.csv  ArtemisCyboquaticNodePlacement2026v1.schema.csv  BatteryMaterialEcosafetyHardGates2026v1.schema.csv  BiodegradableSubstrateChannelEcosafety2026v1.schema.csv  BiodegradableSubstrateChannelKinetics2026v1.schema.csv  EcoCoreParameters2026v1.schema.csv  EnergyBankModuleEcosafety2026v1.schema.csv  SubstrateFlowDegradationKinetics2026v1.schema.csv
schema/: econet_constellation_master_tables.csv
specs/: AcceleratedAgingTranslation2026v1.aln  ArtemisCyboquaticNodePlacement2026v1.aln  BatteryMaterialEcosafetyHardGates2026v1.aln  BiodegradableSubstrateChannelEcosafety2026v1.aln  BiodegradableSubstrateChannelKinetics2026v1.aln  CyboquaticCarbonMaterialMachine2026v1.aln  DecompositionScenario2026v1.aln  EcoCoreParameters2026v1.aln  FOGRoutingDecision2026v1.aln  SubstrateFlowDegradationKinetics2026v1.aln  ecosafety.kern.noncompensation.v1.aln  lane.governance.v1.aln
spine/tasks/: EcoNetKerResidualBlastRadius2026v1.task.sql
src/: QpuLinterMain.cpp  artifact_registry_core.rs  artifactregistrycore.rs
src/migrations/constellation_index/: migrations.rs
src/shards/: mod.rs
virta-git/: Cargo.toml
virtasys/energy/: eco_ker_kernel.rs
