# Filename: crates/virta-git/Cargo.toml

[package]
name        = "virta-git"
version     = "0.1.0"
edition     = "2021"
description = "Virta-Git: policy-aware Git front-end and non-fiction source-of-truth for Virta-Sys and VSC-ARTEMIS."
license     = "MIT"
authors     = ["Dr. Jacob Scott Farmer <noreply@example.com>"]

# Primary repository and documentation anchors.
repository  = "https://github.com/Doctor0Evil/Virta-Git.git"
homepage    = "https://github.com/Doctor0Evil/Virta-Git"
readme      = "README.md"

# This crate is designed to compile on its own, and also be pulled into
# larger workspaces (Eco-Fort, EcoNet, Cyboquatic, etc.) via
#   [workspace.dependencies]
#   virta-git = { path = "crates/virta-git" }

[package.metadata.virta]
system              = "Virta-Git"
virta_sys_anchor    = "virta-sys"
vsc_artemis_anchor  = "VSC-ARTEMIS-5E8A2B7C-AC41-4F2B-BD6E-9C3E7A1F4D2E"
config_manifest     = "virta-git.config.json"
upstreams = [
    "https://github.com/Doctor0Evil/Eco-Fort.git",
    "https://github.com/Doctor0Evil/Virta-Git.git",
]

[package.metadata.virta_git]
# Root directory for configuration, relative to this crate.
config_root        = "config"
# Non-fiction policy path, relative to config_root.
non_fiction_policy = "policies/non_fiction_policy.toml"

[lib]
name = "virta_git"
path = "src/lib.rs"

# ---------------------------------------------------------------------------
# Features
# ---------------------------------------------------------------------------

[features]
# Default build is async, with non-fiction policy enforcement enabled.
default = ["runtime", "policy-non-fiction"]

# Strict content policy enforcement lane.
policy-non-fiction = []

# Runtime for long-lived, policy-enforced git processes (Tokio-based).
runtime = []

# Optional CLI front-end (gate any [[bin]] targets using `required-features = ["cli"]`).
cli = []

# ---------------------------------------------------------------------------
# Dependencies
# ---------------------------------------------------------------------------

[dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
toml        = "0.8"
thiserror   = "1.0"
chrono      = { version = "0.4", features = ["serde"] }
tokio       = { version = "1.37", features = ["rt-multi-thread", "macros"] }
git2        = "0.19"
anyhow      = "1.0"
parking_lot = "0.12"
uuid        = { version = "1.10", features = ["v4", "serde"] }

# Optional, but useful when integrating with ecosafety-aware tooling and
# FOG / KER observability stacks.[file:22][file:23]
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["fmt", "env-filter"] }

# ---------------------------------------------------------------------------
# Profiles
# ---------------------------------------------------------------------------

[profile.release]
lto           = true
codegen-units = 1
opt-level     = "z"
panic         = "abort"
debug         = 0

[profile.dev]
opt-level        = 1
debug            = true
overflow-checks  = true
incremental      = true

# ---------------------------------------------------------------------------
# Workspace usage (documentation only)
# ---------------------------------------------------------------------------
# In a root workspace Cargo.toml (e.g., Eco-Fort / EcoNet / Cyboquatic):
#
#   [workspace]
#   members = [
#       "crates/virta-git",
#       # ...
#   ]
#
#   [workspace.dependencies]
#   virta-git = { path = "crates/virta-git" }
#
# This crate does not declare its own [workspace] table, so it remains
# valid as a standalone package while being consumable as a workspace member.
